--- a/webApp/css/style.css
+++ b/webApp/css/style.css
@@ -14,7 +14,7 @@
 }
 #searchBtn{
     border-radius: 0px 30px 30px 0px;
-   
+    margin-left: -20%;
 }
 table{
     margin-top: 5%;
@@ -40,6 +40,5 @@ footer{
 }
 
 
- 
 
 
