--- a/Frontend App/FrontEnd Homepage/css/style.css
+++ b/Frontend App/FrontEnd Homepage/css/style.css
@@ -1,3 +1,10 @@
+/******************************************
+Team:       SE Team 2
+Homework:   SE Project 3
+Due Date:   November 3rd, 2023
+Class:      CS 4003 - Software Engineering
+******************************************/
+
 /* Nav Bar Setup START*/
 .header{
     background-color: #522E24;
@@ -43,7 +50,7 @@
 
 .saleContainer{
     margin-left: 20%;
-    margin-top: -250px;
+    margin-top: 50px;
 }
 
 .filterSection{
@@ -132,3 +139,45 @@ button{
     font-size: 30px;
     text-align: center;
 }
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #522E24; 
+    color: white;
+    padding: 8px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #75BEDA;}
