--- a/Frontend App/FrontEnd Homepage/css/HomeFrontStyle.css
+++ b/Frontend App/FrontEnd Homepage/css/HomeFrontStyle.css
@@ -6,6 +6,11 @@ Class:      CS 4003 - Software Engineering
 ******************************************/
 
 /* Nav Bar Setup START*/
+
+*{
+    font-family: "Times New Roman", Times, serif;
+}
+
 .header{
     background-color: #522E24;
     margin-top: -10px;
@@ -13,7 +18,6 @@ Class:      CS 4003 - Software Engineering
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
 
 /* style for sub-header navbar */
 .subHeader{
@@ -25,19 +29,13 @@ Class:      CS 4003 - Software Engineering
 .navbar{
     width : 100%;
     background-color: #804D3B;
-    font color="white";
 }
 
-.titleFont{
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
+ .headerFont:hover{
+    color: black;
 }
 
-.headerFont{
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+
 .headerSpacing{
     padding-right:50px;
 }
@@ -90,16 +88,16 @@ button{
     font-family: 'Liberation Sans';
 }
 
-.footer{
-    background-color: #75BEDA;
-    margin-top: 20px;
-}
-
-.footcontainer{
-    margin-top:50px;
-    margin-left: 200px;
-    padding: 25px;
-}
+.footer {
+    
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+    color: #522E24;
+  }
 
 /* container for the top section of the body. For the frame type header text */
 .bodyHeader{
@@ -179,13 +177,22 @@ button{
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #75BEDA;}
 
+  a:hover{
+    color:black;
+  }
+
   /* Start of buy item page style */
 
   .imageScale2{
+    border: 1px solid;
     width: 300px;
     height: 80%;
     margin-left: 20%;
     margin-top: 50px;
+}
+
+body{
+    font-family: "Times New Roman", Times, serif;
 }
 
   .itemBodyContainer{
