--- a/webApp/css/style.css
+++ b/webApp/css/style.css
@@ -1,3 +1,12 @@
+/* Login page style */
+@import url('https://fonts.googleapis.com/css2?family=Poppins wght@200;300;400;500;600;700&display=swap');
+*{
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins,sans-serif';
+}
+
 .navbar{
     background-color: #6F4E37;
     
@@ -32,12 +41,25 @@ body{
     min-height: 100%;
     padding-bottom: 10.74rem;
 }
+/*
 footer{
     position: absolute;
     right: 0;
     left: 0;
     bottom: 0;  
 }
+*/
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+    color: #522E24;
+  }
+
 
 
 
